crates/store/dl_redap_tests/src/tests/snapshots/dl_redap_tests__tests__rrd_manifest__layered_segment_rrd_manifest_2_base_removed_sorbet_schema_sha256.snap
---
source: crates/store/dl_redap_tests/src/tests/rrd_manifest.rs
expression: "rrd_manifest.sorbet_schema_sha256.iter().map(|b|\nformat!(\"{b:02x}\")).collect::<String>()"
---
1e413f649cbbc0e3edc95d674fcf0c1c865135ad39b562e063dc142b318836f6
